Added main.scss and cleaned up files

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     <!-- IT IS V IMPORTANT THAT YOU FILL THESE OUT DO IT -->
     <!--  -->
     <!-- Enter a title before the dash, probably your headline -->
-    <title>Chipotle: The Definitive Oral History - Business, Financial &amp; Economic News, Stock Quotes</title>
+    <title>Pope's View on the Climate Change</title>
 
     <!-- What flavor of Bloomberg will this graphic be on? -->
     <meta property="og:site_name" content="Bloomberg.com"/>
@@ -127,16 +127,14 @@
   <!-- MAIN CONTENT -->
   <div id="container">
 
-    <header>
+    <header class="lede-content">
 
-      <div class="lede-content">
         <div class="hed">
-        <h1>Accidental Burrito Empire: An Oral History of Chipotle</h1>
+          <h1>Pope's View on the Climate Change</h1>
         </div>
         <div class="subhed">
-        <p class="byline">By Kyle Stock and Venessa Wong</p>
+          <p class="byline">By Kyle Stock and Venessa Wong</p>
         </div>
-      </div>
     </header>
 
     <div id="main">
