Changed title tags to use normal font weight. Set up quotes.

--- a/public/index.html
+++ b/public/index.html
@@ -230,7 +230,7 @@
 
                 <p>The number of people indirectly represented by either a religion or an organization at the climate workshop was probably between 2 billion and 2.5 billion. The 5,100 bishops responsible for 414,000 priests will each decide if or how to bring the encyclical to bear on the 1.2 billion Roman Catholics. Other Christian denominations add up to about 600 million. Two hundred million Indonesian Muslims. Six million Japanese buddhists. Also represented were the 30 million Sikhs, the 15 million Cambodian buddhists, the 14 million Jews, and all Iranian women.</p>
 
-                <h2>William Vendley Quote</h2>
+                <blockquote class="reveal fadeInUp">William Vendley Quote</blockquote>
 
                 <p>Now that the encyclical has hit, the ground game is running. In the U.S., the Catholic Climate Covenant, a quasi-official group, is working with Cardinals, Archbishops, and bishops to push out the encyclical. The online version of the encyclical is Twitter-friendly, so that the Pope's 6.1 million followers on the social media platform can easily cut, paste, and send their favorite lines around to friends.</p>
 
@@ -254,7 +254,7 @@
 
                 <p>It's one thing for a company that sells soap reaching out to the unwashed masses. It's another thing when Europe's five oil majors petitioned the UN for input on designing a carbon policy, as they did earlier this month. ExxonMobil tracks a "shadow" carbon price, to measure how a tax or exchange might affect its profitability.</p>
 
-                <h2>SCHELLNHUBER QUOTE ABOUT BUSINESS AS THE MOST RATIONAL PEOPLE TO DEAL WITH</h2>
+                <blockquote class="reveal fadeInUp">Schellnhuber Quote About Business As The Most Rational People To Deal With</blockquote>
 
                 <p>It remains to be seen whether the Pope and the forces pushing for mature global warming policy -- large cities, large companies, European oil majors, the Obama administration, Republican presidential candidate Lindsey Graham and some allied think tanks in Washington -- will push nations into significant agreement in December in Paris.</p> 
 
