Updated Blockquote style.

--- a/public/index.html
+++ b/public/index.html
@@ -146,7 +146,7 @@
 
 
         <!-- INTRO -->
-            <section class="intro">
+            <section>
                 <p>The Vatican took almost 360 years to officially say it’s sorry to Galileo. To avoid another consequential mistake, it makes no apology for its trust in climate change science, and is telling the whole world about it.</p>
 
                 <p>That’s why the Vatican invited the religions of the world to Rome for a one-day climate change conference in April. More than a dozen faith leaders heard an exclusive preview of the Vatican’s thinking about humanity and nature, the subject Pope Francis's  landmark encyclical letter to his bishops that was released Thursday.</p>
@@ -234,11 +234,16 @@
 
                 <p>The number of people indirectly represented by either a religion or an organization at the climate workshop was probably between 2 billion and 2.5 billion. The 5,100 bishops responsible for 414,000 priests will each decide if or how to bring the encyclical to bear on the 1.2 billion Roman Catholics. Other Christian denominations add up to about 600 million. Two hundred million Indonesian Muslims. Six million Japanese buddhists. Also represented were the 30 million Sikhs, the 15 million Cambodian buddhists, the 14 million Jews, and all Iranian women.</p>
 
-                <blockquote class="reveal fadeInUp">William Vendley Quote</blockquote>
+                <blockquote class="reveal fadeInUp">
+                    <img class="quote-img" src="https://placeimg.com/100/100/people" />
+                    <p class="quote">William Vendley Quote</p>
+                    <p class="quoter">-William Vendley</p>
+                </blockquote>
 
                 <p>Now that the encyclical has hit, the ground game is running. In the U.S., the Catholic Climate Covenant, a quasi-official group, is working with Cardinals, Archbishops, and bishops to push out the encyclical. The online version of the encyclical is Twitter-friendly, so that the Pope's 6.1 million followers on the social media platform can easily cut, paste, and send their favorite lines around to friends.</p>
 
-                <p>Running in parallel to the official Catholic launch are dozes of groups bending the Pope’s agenda to their own. Semi-official catholic groups, non-official catholic groups, protestant groups, interfaith groups, all green. SALLY BINGHAM QUOTE. The American environmental movement has entertained at least since 1967 the question of whether the western church has brought on pollution and ecological decay by emphasizing humanity's dominion over nature; yet even the hippie, atheist tree-worshippers are having their come-to-Francis moment.</p>
+<!-- NEED QUOTE -->
+                <p>Running in parallel to the official Catholic launch are dozes of groups bending the Pope’s agenda to their own. Semi-official catholic groups, non-official catholic groups, protestant groups, interfaith groups, all green. <q>SALLY BINGHAM QUOTE.</q> The American environmental movement has entertained at least since 1967 the question of whether the western church has brought on pollution and ecological decay by emphasizing humanity's dominion over nature; yet even the hippie, atheist tree-worshippers are having their come-to-Francis moment.</p>
 
                 <p>With five months to go before nations meet in Paris to try and clinch a climate treaty, Francis's plan may very well lead to some grassroots political pressure in climate-critical nations with many Roman Catholics. The climate advocacy group TK, for example, is focusing its efforts on eight nations. *** Brazil, host to the biggest lungs on the planet, the Amazon; the Philippines, victim of warming-enhanced hurricane Haiyan; Poland, Europe's best friend of coal; Congo, hoping to conserve their rainforests, the world's third largest, also can't help green-lighting development plans.</p>
 
@@ -258,7 +263,11 @@
 
                 <p>It's one thing for a company that sells soap reaching out to the unwashed masses. It's another thing when Europe's five oil majors petitioned the UN for input on designing a carbon policy, as they did earlier this month. ExxonMobil tracks a "shadow" carbon price, to measure how a tax or exchange might affect its profitability.</p>
 
-                <blockquote class="reveal fadeInUp">Schellnhuber Quote About Business As The Most Rational People To Deal With</blockquote>
+                <blockquote class="reveal fadeInUp">
+                    <img class="quote-img" src="https://placeimg.com/100/100/people" />
+                    <p class="quote">Schellnhuber Quote About Business As The Most Rational People To Deal With</p>
+                    <p class="quoter">-William Vendley</p>
+                </blockquote>
 
                 <p>It remains to be seen whether the Pope and the forces pushing for mature global warming policy -- large cities, large companies, European oil majors, the Obama administration, Republican presidential candidate Lindsey Graham and some allied think tanks in Washington -- will push nations into significant agreement in December in Paris.</p> 
 
